# auto-ML-webapp

./: .gitignore  README.md  app.py  config.toml  pyproject.toml
app/: app.py  modules.py
models/: best_model.pkl
